--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "convert-csv-to-json": "^1.3.0",
     "dompurify": "^2.2.6",
     "form-data": "^3.0.0",
+    "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-table": "^6.11.5",
     "react-validation": "^3.0.7",
     "read-excel-file": "^5.0.0",
     "redux": "^4.0.5",
