--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "convert-csv-to-json": "^1.3.0",
     "dompurify": "^2.2.6",
+    "file-saver": "^2.0.5",
     "form-data": "^3.0.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
