--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ramonak/react-excel": "^1.0.1",
+    "@syncfusion/ej2-base": "^18.4.44",
+    "@syncfusion/ej2-react-inputs": "^18.4.47",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,11 +18,14 @@
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
+    "react-json-excel": "^1.1.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-table": "^6.11.5",
+    "react-toastify": "^7.0.3",
     "react-validation": "^3.0.7",
     "read-excel-file": "^5.0.0",
     "redux": "^4.0.5",
@@ -51,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "typescript": "^4.2.3"
   }
 }
