--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@ramonak/react-excel": "^1.0.1",
     "@syncfusion/ej2-base": "^18.4.44",
     "@syncfusion/ej2-react-inputs": "^18.4.47",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.15.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.6.0",
     "convert-csv-to-json": "^1.3.0",
@@ -16,6 +18,7 @@
     "file-saver": "^2.0.5",
     "form-data": "^3.0.0",
     "jquery": "^3.5.1",
+    "multiselect-react-dropdown": "^1.6.11",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
     "react-csv": "^2.0.3",
@@ -24,6 +27,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^4.3.0",
     "react-table": "^6.11.5",
     "react-toastify": "^7.0.3",
     "react-validation": "^3.0.7",
