--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bootstrap": "^4.6.0",
     "convert-csv-to-json": "^1.3.0",
     "dompurify": "^2.2.6",
+    "export-to-csv": "^0.2.1",
     "file-saver": "^2.0.5",
     "form-data": "^3.0.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.3",
+    "react-confirm-alert": "^2.7.0",
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-json-excel": "^1.1.0",
